adds some views, ng-includes news and donate sidebar

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -91,6 +91,8 @@
       window.location = "https://secure.actblue.com/contribute/page/newsomdonate?refcode=www&amount=" + user;
     }
   </script>
+
+  <base href="/" >
 </head>
 
 <body ng-app="starter">
