updates more views, includes bug fixes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -63,7 +63,7 @@
   <script type="text/javascript" src="./media/js/udm/udm-dom.js" defer="defer"></script>
   <script type="text/javascript" src="./media/js/udm/udm-mod-keyboard.js" defer="defer"></script>
   <script type="text/javascript">var switchTo5x=true;</script> -->
-  <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js" defer="defer"></script>
+  <!-- <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js" defer="defer"></script> -->
   <!-- <script type="text/javascript">stLight.options({publisher: "954eb6cc-e0c3-4406-9356-78cf33d429f6", doNotHash: true, doNotCopy: true, hashAddressBar: false});</script> -->
 
 
