finishes site routing, only home page and mobile left

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,25 +3,22 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta http-equiv="Content-Language" content="en-us" />
-<meta http-equiv="Content-Style-Type" content="text/css" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta http-equiv="Content-Language" content="en-us" />
+  <meta http-equiv="Content-Style-Type" content="text/css" />
 
 
-<meta property="fb:admins" content="590481570" /> 
-<meta property="fb:admins" content="512029729" />
-<meta property="og:type" content="website" />
-<meta property="og:image" content="media/images/2015.fbthumb.png" />
+  <!-- <meta property="fb:admins" content="590481570" /> 
+  <meta property="fb:admins" content="512029729" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="media/images/2015.fbthumb.png" /> -->
 
 
-
-<meta name="description" content="Lieutenant Governor Gavin Newsom is running for Governor of California."  />
-<meta property="og:description" content="Lieutenant Governor Gavin Newsom is running for Governor of California."  />
-<meta property="og:title" content="Gavin Newsom for Governor 2018 | California" />
-<meta name="title" content="Gavin Newsom for Governor 2018 | California" />
-<meta property="og:url" content="http://gavinnewsom.com/index.html" />
-
-
+  <meta name="description" content="Lieutenant Governor Gavin Newsom is running for Governor of California."  />
+  <meta property="og:description" content="Lieutenant Governor Gavin Newsom is running for Governor of California."  />
+  <meta property="og:title" content="Gavin Newsom for Governor 2018 | California" />
+  <meta name="title" content="Gavin Newsom for Governor 2018 | California" />
+  <meta property="og:url" content="http://gavinnewsom.com/index.html" />
 
   <title>Gavin Newsom for Governor 2018 | California</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes" />
@@ -39,14 +36,6 @@
   <link rel="stylesheet" href="media/css/custom.css" type="text/css"/>
   <link rel="stylesheet" href="media/css/text.css" type="text/css"/>
   <link rel="stylesheet" href="media/css/screen.css" type="text/css"/>
-  <!--[if IE 7]>
-  <link rel="stylesheet" href="/media/css/ie7.css" type="text/css" media="screen" />
-  <![endif]-->
-  <!--[if IE 6]>
-  <link rel="stylesheet" href="/media/css/ie6.css" type="text/css" media="screen" />
-  <![endif]-->
-  <!-- ULTIMATE DROP DOWN MENU Version 4.5 by Brothercake -->
-  <!-- http://www.udm4.com -->
 
   <script type="text/javascript" src="bower_components/angular/angular.js"></script>
   <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
@@ -54,21 +43,22 @@
 
   <!-- Angular Scripts -->
   <script src="media/js/app.js"></script>
-  <script src="controllers/indexController.js"></script>
+  <script src="controllers/generalController.js"></script>
   <!-- End of Angular Scripts -->
 
 
   <link rel="alternate" type="application/rss+xml" title="Gavin Newsom for Governor 2018 | California RSS 2.0" href="feeds/latest/index.html" />
 
-  <link rel="shortcut icon" href="./media/images/favicon.ico" type="image/x-icon">
+<!--   <link rel="shortcut icon" href="./media/images/favicon.ico" type="image/x-icon">
   <link rel="icon" href="./media/images/favicon.ico" type="image/x-icon">
   <link rel="apple-touch-icon-precomposed" href="../images/favicon-152.png">
   <meta name="msapplication-TileColor" content="#2c3d5b">
-  <meta name="msapplication-TileImage" content="./media/images/favicon-144.png">
+  <meta name="msapplication-TileImage" content="./media/images/favicon-144.png"> -->
 
   <!-- includes the font "Lato" from google fonts -->
   <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css' />
 
+  <!-- includes jquery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.cycle2/2.1.6/jquery.cycle2.min.js"></script>
 
@@ -95,6 +85,21 @@
   <script type="text/javascript">var switchTo5x=true;</script>
   <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
   <script type="text/javascript">stLight.options({publisher: "b3f241c8-b10f-4386-8784-13f8c5a545d0", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
+
+
+
+
+  <!-- include jQuery -->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+
+  <!-- include Cycle2 -->
+  <script src="./media/js/jquery.cycle2.min.js"></script>
+
+  <!-- include one or more optional Cycle2 plugins -->
+  <script src="./media/js/jquery.cycle2.carousel.min.js"></script>
+
+
+
 
   <base href="/" >
 </head>
